--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,15 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    testImplementation 'org.springframework.security:spring-security-test'
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // jackson for kotlin
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
@@ -49,6 +52,7 @@ dependencies {
 
     // test & platform
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
