--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.show_sql=true
 cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.bucket-name=${AWS_BUCKET_NAME}
+
+# jwt properties
+jwt.secret: ${JWT_SECRET_KEY}
+jwt.expiration: ${JWT_EXP_TIME}
