refactor: 친구삽입 기능 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=Bible-BE
 
 # database Setting
-spring.datasource.driver-class-name=${DB_DRIVER}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=${DB_URL}
+spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:1234}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3310/bible}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 # s3 config
-cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
-cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
-cloud.aws.bucket-name=${AWS_BUCKET_NAME}
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY:erefdsf}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY:fdsafasdf}
+cloud.aws.bucket-name=${AWS_BUCKET_NAME:fdasff}
 
 # jwt properties
-jwt.secret: ${JWT_SECRET_KEY}
-jwt.expiration: ${JWT_EXP_TIME}
+jwt.secret: ${JWT_SECRET_KEY:ehdgoanfrhkqorentksdlakfmrhekekfadff}
+jwt.expiration: ${JWT_EXP_TIME:8240000}
