feat: 배포 관련 docker file 작성 및 CORS 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.bucket-name=${AWS_BUCKET_NAME}
 
 # jwt properties
-jwt.secret: ${JWT_SECRET_KEY}
-jwt.expiration: ${JWT_EXP_TIME}
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=${JWT_EXP_TIME}
