--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#logging.level.root=INFO
+#logging.level.org.springframework=TRACE
+#logging.level.org.springframework.web=TRACE
 spring.application.name=Bible-BE
 
 # database Setting
