fix: make dir  이미 존재하는 디렉터리입니다 에러 해결

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,7 +24,7 @@ jobs:
       - name: make application.properties file
         if: contains(github.ref, 'main')
         run: |
-          mkdir ./src/main/resources
+          mkdir -p ./src/main/resources
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
