--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -54,7 +54,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
-            sudo docker ps
+            sudo docker rm -f $(docker ps -q --filter "ancestor=${{ secrets.DOCKER_USERNAME }}/bible")
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/bible
-            sudo docker run -d -p 8082:8082 ${{ secrets.DOCKER_USERNAME }}/bible
+            sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/bible
             sudo docker image prune -f
